--- a/css/style_pagina_profilo.css
+++ b/css/style_pagina_profilo.css
@@ -1,14 +1,4 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
 
-  body, html {
-    background-color:rgb(247, 247, 247);
-    height: 100%;
-    font-family: Arial, sans-serif;
-  }
 
   .page-wrapper {
     display: flex;
@@ -153,7 +143,28 @@ pointer-events: none;
     gap: 10px;
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.05);
     display: grid;
+    font-size: 1.5rem;
     grid-template-columns: repeat(4, 1fr);
+  }
+  nav, .nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  nav, .nav {
+    flex-direction: column !important;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .logo {
+    margin-bottom: 12px;
+    margin-left: -13px; 
+  }
+    .photos-container {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
   }
 
   .photos-container img {
