--- a/css/style_pagina_profilo.css
+++ b/css/style_pagina_profilo.css
@@ -9,6 +9,8 @@
   /* PROFILO A SINISTRA */
 
   .profile-sidebar {
+margin-top: 15px;
+margin-left: 5px;
 border-radius: 20px;
 transition: background-color 0.3s ease;
 display: flex;
