--- a/stili_card.css
+++ b/stili_card.css
@@ -16,7 +16,7 @@
 }
     .script {
       font-family: 'Great Vibes', cursive;
-      font-size: 24px;
+      font-size: 18px;
       color: #e9f7e7;
     }
 .card.stile1{
@@ -29,7 +29,7 @@
       padding: 20px;
 }
     .quote{
-      font-size: 20px;
+      font-size: 16px;
       color: #f5f5f5;
       background: rgba(0, 0, 0, 0.4);
       padding: 12px 20px;
@@ -89,13 +89,14 @@
 
     .left h1 {
         color: #1a355e !important;
-        font-size: 70px;
+        font-size: 30px;
       font-weight: 700;
       text-transform: uppercase;
       margin-bottom: 20px;
     }
      .left h2 {
         color: #1a355e !important;
+        font-size: 1.5em;
     }
     .left p {
         color: #1a355e !important;
@@ -134,7 +135,7 @@
 
     .right h1 {
         color:#2d6a4f;;
-      font-size: 39px;
+      font-size: 28px;
       font-weight: 700;
       text-transform: uppercase;
       margin-bottom: 20px;
@@ -185,13 +186,13 @@
     }
 
     h1 {
-      font-size: 70px;
+      font-size: 50px;
       margin-bottom: 20px;
       color: #f5f5f5;
     }
 
     h2 {
-      font-size: 30px;
+      font-size: 26px;
       font-weight: 400;
       line-height: 1.4;
       margin-bottom: 40px;
