--- a/stili_card.css
+++ b/stili_card.css
@@ -116,15 +116,14 @@
     }
 }
 .card.stile3{
-    .left {
-      flex: 1.5;
-      background-size: cover;
-      background-position: center;
-      position: relative;
-    }
-
+.left {
+  flex: 0 0 20%;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
     .right {
-      padding: 40px;
+      padding: 20px;
       background-color: #dcd6cf;
       flex: 1;
       color: #2d6a4f;
@@ -136,20 +135,20 @@
     .right h1 {
         color:#2d6a4f;;
       font-size: 28px;
-      font-weight: 700;
+      font-weight: 400;
       text-transform: uppercase;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .right p {
         color: #2d6a4f;;
       font-size: 14px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     .right h2 {
         color: #2d6a4f;;
-      font-size: 20px;
-      margin-bottom: 20px;
+      font-size: 16px;
+      margin-bottom: 10px;
     }
     .script{
         color: #2d6a4f;;
@@ -195,7 +194,7 @@
       font-size: 26px;
       font-weight: 400;
       line-height: 1.4;
-      margin-bottom: 40px;
+      margin-bottom: 10px;
       color: #f5f5f5;
     }
 
@@ -203,7 +202,7 @@
       font-size: 16px;
       line-height: 1.6;
       color: #e0e0e0;
-      margin-bottom: 40px;
+      margin-bottom: 10px;
       max-width: 400px;
     }
 
